cruzy-demo/force-app/main/default/objects/Reward__c/Reward__c.object-meta.xml
<CustomObject>
    <description>Tracks carnival cruise reward certificates issued to customers through B2B partner programs.</description>
    <label>Reward</label>
    <nameField>
        <label>Complete Reward Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rewards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>