cruzy-demo/force-app/main/default/objects/Reward__c/fields/Book_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Book_By_Date__c</fullName>
    <label>Book By Date</label>
    <type>Date</type>
</CustomField>