cruzy-demo/force-app/main/default/objects/Reward__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Rewards</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>