cruzy-demo/force-app/main/default/objects/Reward__c/fields/Reward_Location__c.field-meta.xml
<CustomField>
    <fullName>Reward_Location__c</fullName>
    <label>Reward Location</label>
    <length>10</length>
    <type>Text</type>
</CustomField>