cruzy-demo/force-app/main/default/objects/Reward__c/fields/Reward_Number__c.field-meta.xml
<CustomField>
    <fullName>Reward_Number__c</fullName>
    <label>Reward Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>