cruzy-demo/force-app/main/default/objects/Reward__c/fields/Six_Mo_No_Contact_Followup__c.field-meta.xml
<CustomField>
    <fullName>Six_Mo_No_Contact_Followup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>6 Mo - No Contact Follow-Up</label>
    <type>Checkbox</type>
</CustomField>