cruzy-demo/force-app/main/default/objects/Reward__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Used</fullName><default>false</default><label>Used</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
            <value><fullName>Not Found</fullName><default>false</default><label>Not Found</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>