cruzy-demo/force-app/main/default/objects/Reward__c/listViews/Active_Rewards.listView-meta.xml
<ListView>
    <fullName>Active_Rewards</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Partner__c</columns>
    <columns>Issue_Date__c</columns>
    <columns>Book_By_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Rewards</label>
    <language>en_US</language>
</ListView>