cruzy-demo/force-app/main/default/objects/Reward__c/listViews/All_Rewards.listView-meta.xml
<ListView>
    <fullName>All_Rewards</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Partner__c</columns>
    <columns>Issue_Date__c</columns>
    <columns>Book_By_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Rewards</label>
    <language>en_US</language>
</ListView>